Tests/RunCMake/Syntax/NameWithCarriageReturn-stderr.txt
^CMake Error at NameWithCarriageReturn.cmake:1 \(message\):
  Syntax error in cmake code at

    .*/Tests/RunCMake/Syntax/NameWithCarriageReturn.cmake:1

  when parsing string

    \${var\\rwith\\rcarriagereturn}

  syntax error, unexpected cal_SYMBOL, expecting } \(6\)
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)$
